fix drop down group cutoff

--- a/src/assets/css/organisms/_dropdown-group.scss
+++ b/src/assets/css/organisms/_dropdown-group.scss
@@ -9,6 +9,7 @@
 
   &.-no-margin {
     margin: 0;
+    min-width: 100%;
   }
 
   i.dropdownIcon {
